# LittleTricks

./: README.md
Windows/ModuleStomping/: README.md
Windows/ModuleStomping/demo/: main.cpp
Windows/ProcessHerpaderping/: README.md  common.h  main.cpp
Windows/ProcessHollowing/: CMakeLists.txt  README.md  main.cpp
Windows/TransactHollowing/: CMakeLists.txt  README.md  common.h  main.cpp
Windows/apcinject/: README.md
Windows/apcinject/CreateThead+APC/: CMakeLists.txt  main.cpp
Windows/apcinject/NtTestAlert/: CMakeLists.txt  main.cpp
Windows/apcinject/apcinject/: CMakeLists.txt  main.cpp
Windows/apcinject/apcinject2/: CMakeLists.txt  main.cpp
Windows/apcinject/earlybird/: CMakeLists.txt  main.cpp
Windows/selfdelete/: README.MD  selfdelete.cpp
